// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RechargeIntegration/> render() should display a list of shopify stores to connect to 1`] = `
<div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div>
          <label
            class="control-label"
          >
            Select an existing Shopify integration
          </label>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 installButton mb-2 ui-button-fill-cef1 ui-button-secondary-cef1"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <img
                alt="shopify logo"
                class="shopifyLogo"
                src="/assets/img/integrations/shopify.png"
              />
              Install Recharge for
               
              my first mock store
            </span>
          </button>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 installButton mb-2 ui-button-fill-cef1 ui-button-secondary-cef1"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <img
                alt="shopify logo"
                class="shopifyLogo"
                src="/assets/img/integrations/shopify.png"
              />
              Install Recharge for
               
              my second mock store
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<RechargeIntegration/> render() should render a loader because the integration is loading 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="inner"
      style="min-height: 500px;"
    >
      <i
        class="icon-custom icon-circle-o-notch md-spin"
        style="font-size: 40px;"
      />
    </div>
  </div>
</div>
`;

exports[`<RechargeIntegration/> render() should render an integration with a delete button 1`] = `
<div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <label
          class="mb-2"
          for="disabled-store-field"
        >
          Store name
        </label>
        <span
          class="mb-4 wrapper group horizontal"
        >
          <div
            class="wrapper left isDisabled isNested"
          >
            <input
              class="input"
              data-resizable="false"
              disabled=""
              id="disabled-store-field"
              name="store-name"
              type="text"
              value=""
            />
          </div>
          <span
            class="groupAddon right isDisabled"
          >
            .myshopify.com
          </span>
        </span>
        <div>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 float-right ui-button-fill-cef1 ui-button-destructive-cef1"
            id="confirm-button-delete"
            type="button"
          >
            <i
              aria-hidden="true"
              class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486"
            >
              delete
            </i>
            <span
              class="ui-button-content-cef1"
            >
              Delete App
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
